up: doc and container definition
build the container image locally using a slightly improved
container definition. it is know pulling a debian image and
it deletes the dorado tar ball before generating the .sif.

TODO: this definition must freeze versions of all dependencies
to ensure reproducibility and compatibility over time.

this commit also deletes old definitions and moves the
previous 'singultarity_containers' to just 'containers'.

lastly, the nextflow.config has been altered to use the local
container image instead of pulling it from the cloud.

--- a/workflow/nextflow.config
+++ b/workflow/nextflow.config
@@ -87,8 +87,9 @@ process {
         containerOptions = '--nv'
     }
    
-    // Define the singularity container for every process, will pull container from the cloud
-    container = "library://joaochrusciel/nanopore/ont_methylation:2024-10-18"
+    // Define the singularity container for every process
+    //container = "library://joaochrusciel/nanopore/ont_methylation:2024-10-18"
+    container = "./images/debian-nanopore.sif"
 
 }
 
@@ -103,5 +104,6 @@ executor {
 apptainer {
 
 	enabled = true
+	pullTimeout = '60m'
 
 }
