fix: strict syntax format

--- a/src/nextflow.config
+++ b/src/nextflow.config
@@ -42,12 +42,12 @@ params.multiqc_config = "None"
 // Are the files from MinKNOW barcoded or not 
 params.is_barcoded = true
 
-// Set queue size for the executor
-if (params.step == 1) {
-	queue_size = 1
-} else {
-	queue_size = 5
-}
+// queue_size depends on the step
+includeConfig ({
+    if (params.step == 1) { return './configs/queue-basecalling.config' }
+    else { return './configs/queue-default.config' }
+}())
+
 process { 
     // Define local cpu execution
     withLabel: cpu {
@@ -64,7 +64,7 @@ process {
 }
 executor {
 	name = 'local'
-	queueSize = queue_size
+	queueSize = params.queue_size
 }
 apptainer {
 	enabled = true
