fixed GPU access issue by adding --nvccli

--- a/src/nextflow.config
+++ b/src/nextflow.config
@@ -58,7 +58,7 @@ process {
     // Define local gpu execution
     withLabel: gpu {
         executor='local'
-        containerOptions = '--nv'
+        containerOptions = '--nv --nvccli'
     }
     // Define the container for every process
     container = "./images/debian-nanopore.sif"
