up: basecalling, nextflow.config, nextflow parameters and readability
 - Updated multiple variables in nextflow.config to match them across the different processes and workflows;
 - Added profiles in nextflow to facilitate the steps;
 - Added --kit-name configuration (params.barcoding_kit) to improve trimming during basecalling;
 - Changed descriptions across variables in nextflow.config;
 - Improved output directory name to include the projects' name (params.project_name);
 - Updated params.basecall_speed to use latest available simplex/modification model for basecalling;
 - Reorganized demux process to be included in the basecalling process to improve code readability;
 - Corrected few typos.

--- a/src/nextflow.config
+++ b/src/nextflow.config
@@ -4,34 +4,36 @@
 // pipeline on command line (e.g. --ont_reads_fq sample_1.fastq)
 
 params {
+    // Project name (used to identify which project you're working on)
+    project_name = "default"
     // Input reference fasta file
-    ref = 'None' 
+    reference_file = "None" 
     // Step of pipeline to execute
-    step = 'None'
+    step = "None"
     // Output directory for pipeline results
-    out_dir = "output_directory/" 
+    out_dir = "results_${params.project_name}/" 
     // directory of basecalling data
-    basecall_path = 'None' 
+    basecall_path = "None" 
     // MAPQ filtering threshold for bam files, 0 for no filtering
     mapq = "10" 
     // Quality score threshold
     qscore_thresh = "9"
-    // Desired basecall speed 
-    basecall_speed = "hac"
-    // Desired basecaller modifications
-    basecall_mods = false
+    // Desired basecall speed ("fast", "hac", "sup"; @latest <- latest version available)
+    basecall_speed = "sup@latest"
+    // Desired basecaller modifications (4mC_5mC, 5mCG_5hmCG, 5mC_5hmC, 6mA; can't use more than one modification per nucleotide)
+    basecall_mods = "5mC_5hmC"
+    // Kit name (kit used to barcode the samples (e.g. SQK-RBK114-24); Use "None" to skip --kit-name in basecalling)
+    barcoding_kit = "SQK-RBK114-24"
     // Threshold for mapped reasds
     min_mapped_reads_thresh = 500
-    // Desired basecall configuration
+    // Desired basecall model version as a path (e.g. ./models/dna_r10.4.1_e8.2_400bps_sup@v5.2.0)
     basecall_config = "None"
-    // Type of read trimming during basecalling ("all", "primers", "adapters", "none")
-    basecall_trim = "none"
+    // Type of read trimming during basecalling ("all", "primers", "adapters", "none"); You should change to "none" if you don't want to trim in the basecalling
+    basecall_trim = "all"
     // Basecalling demultiplexing
     basecall_demux = false
-    // CPU vs GPU basecalling
-    basecall_compute = "gpu"
-    // Trim barcodes (only counts if demultiplexing is enabled)
-    trim_barcode = "True"
+    // Barcodes were trimmed? (if True = demux will only separate the files; if False = demux will trim after basecalling and separate them)
+    trimmed_barcodes = "True"
     // Add prefix to all output files
     prefix = "None"
     // Which GPU devices to use for basecalling?
@@ -72,4 +74,38 @@ executor {
 apptainer {
 	enabled = true
 	pullTimeout = '60m'
+}
+
+profiles {
+    Basecall_Human_Blood {
+        params {
+            project_name = "humanTest"
+            step = 1
+            basecall_path = "./data/pod5"
+            reference_file = "./references/Homo_sapiens.GRCh38.dna.primary_assembly.fa"
+            qscore_thresh = "9"
+            basecall_speed = "sup@latest"
+            basecall_mods = "5mC_5hmC"
+            barcoding_kit = "SQK-RBK114-24"
+            basecall_config = "None"
+            basecall_trim = "all"
+            basecall_demux = false
+            trim_barcode = "True"
+            gpu_devices = "all"
+            out_dir = "results_humanTest/"
+        }
+        executor.queueSize = 1
+    }
+
+    QC_Human_Blood {
+        params {
+            project_name = "humanTest"
+            step = "2_from_step_1"
+            steps_2_and_3_input_directory = "./results/results_humanTest/"
+            min_mapped_reads_thresh = 500
+            qscore_thresh = 9
+            mapq = 10
+            out_dir = "results_humanTest/"
+        }
+    }
 }
