up: nextflow.config with modkit profile

--- a/src/nextflow.config
+++ b/src/nextflow.config
@@ -108,4 +108,14 @@ profiles {
             out_dir = "results_humanTest/"
         }
     }
+
+    Modkit_Human_Blood {
+        params {
+            project_name = "humanTest"
+            step = 3
+            steps_2_and_3_input_directory = "./results/results_humanTest/"
+            multiqc_config = "./references/multiqc_config.yaml"
+            out_dir = "results_humanTest/"
+        }
+    }
 }
