up: gpu comments + profiles usage

--- a/src/nextflow.config
+++ b/src/nextflow.config
@@ -60,6 +60,8 @@ process {
     // Define local gpu execution
     withLabel: gpu {
         executor='local'
+        // --nv deafult flag to run CUDA applications (can be set on by deafult in /etc/apptainer/apptainer.conf)
+        // --nvccli uses the nvidia-container-cli (see 'https://apptainer.org/docs/user/main/gpu.html#nvidia-gpus-cuda-nvidia-container-cli')
         containerOptions = '--nv --nvccli'
     }
     // Define the container for every process
@@ -77,9 +79,9 @@ apptainer {
 }
 
 profiles {
-    Basecall_Human_Blood {
+    human_blood_basecall {
         params {
-            project_name = "humanTest"
+            project_name = "human_blood"
             step = 1
             basecall_path = "./data/pod5"
             reference_file = "./references/Homo_sapiens.GRCh38.dna.primary_assembly.fa"
@@ -92,30 +94,30 @@ profiles {
             basecall_demux = false
             trim_barcode = "True"
             gpu_devices = "all"
-            out_dir = "results_humanTest/"
+            out_dir = "results_human_blood/"
         }
         executor.queueSize = 1
     }
 
-    QC_Human_Blood {
+    human_blood_qc {
         params {
-            project_name = "humanTest"
+            project_name = "results_human_blood"
             step = "2_from_step_1"
-            steps_2_and_3_input_directory = "./results/results_humanTest/"
+            steps_2_and_3_input_directory = "./results/results_human_blood/"
             min_mapped_reads_thresh = 500
             qscore_thresh = 9
             mapq = 10
-            out_dir = "results_humanTest/"
+            out_dir = "results_human_blood/"
         }
     }
 
-    Modkit_Human_Blood {
+    human_blood_modkit {
         params {
-            project_name = "humanTest"
+            project_name = "results_human_blood"
             step = 3
-            steps_2_and_3_input_directory = "./results/results_humanTest/"
+            steps_2_and_3_input_directory = "./results/results_human_blood/"
             multiqc_config = "./references/multiqc_config.yaml"
-            out_dir = "results_humanTest/"
+            out_dir = "results_human_blood/"
         }
     }
 }
