fix: docs and nextflow main config
fix typos and missing parameters in the documentation.

remove redundant parameters in the human_blood profiles (most were
the same as the default ones).

--- a/src/nextflow.config
+++ b/src/nextflow.config
@@ -1,7 +1,5 @@
-// CONFIGURATION FILE
-
-// Pipeline parameter default values, can be modified by user when calling
-// pipeline on command line (e.g. --ont_reads_fq sample_1.fastq)
+// MAIN CONFIGURATION FILE
+// see src/configs for other parameters
 
 params {
     // Project name (used to identify which project you're working on)
@@ -13,14 +11,14 @@ params {
     // Output directory for pipeline results
     out_dir = "results_${params.project_name}/" 
     // directory of basecalling data
-    basecall_path = "None" 
+    basecall_path = "./data" 
     // MAPQ filtering threshold for bam files, 0 for no filtering
     mapq = "10" 
     // Quality score threshold
     qscore_thresh = "9"
     // Desired basecall speed ("fast", "hac", "sup"; @latest <- latest version available)
     basecall_speed = "sup@latest"
-    // Desired basecaller modifications (4mC_5mC, 5mCG_5hmCG, 5mC_5hmC, 6mA; can't use more than one modification per nucleotide)
+    // Desired basecaller modifications (4mC_5mC, 5mCG_5hmCG, 5mC_5hmC, 6mA). Can't use more than one modification per nucleotide.
     basecall_mods = "5mC_5hmC"
     // Kit name (kit used to barcode the samples (e.g. SQK-RBK114-24); Use "None" to skip --kit-name in basecalling)
     barcoding_kit = "SQK-RBK114-24"
@@ -41,7 +39,7 @@ params {
     // Previous results
     steps_2_and_3_input_directory = "None"
     // MultiQC config
-    multiqc_config = "None"
+    multiqc_config = "./references/multiqc_config.yaml"
     // Are the files from MinKNOW barcoded or not 
     is_barcoded = true
 }
@@ -79,44 +77,29 @@ apptainer {
 }
 
 profiles {
+    // Human Blood
     human_blood_basecall {
         params {
             project_name = "human_blood"
             step = 1
             basecall_path = "./data/pod5"
             reference_file = "./references/Homo_sapiens.GRCh38.dna.primary_assembly.fa"
-            qscore_thresh = "9"
-            basecall_speed = "sup@latest"
-            basecall_mods = "5mC_5hmC"
-            barcoding_kit = "SQK-RBK114-24"
-            basecall_config = "None"
-            basecall_trim = "all"
-            basecall_demux = false
-            trim_barcode = "True"
-            gpu_devices = "all"
             out_dir = "results_human_blood/"
         }
-        executor.queueSize = 1
     }
-
     human_blood_qc {
         params {
             project_name = "results_human_blood"
             step = "2_from_step_1"
             steps_2_and_3_input_directory = "./results/results_human_blood/"
-            min_mapped_reads_thresh = 500
-            qscore_thresh = 9
-            mapq = 10
             out_dir = "results_human_blood/"
         }
     }
-
     human_blood_modkit {
         params {
             project_name = "results_human_blood"
             step = 3
             steps_2_and_3_input_directory = "./results/results_human_blood/"
-            multiqc_config = "./references/multiqc_config.yaml"
             out_dir = "results_human_blood/"
         }
     }
